# z80cpp

./: .clang-format  .clang-tidy  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CTEST_BENCHMARKS.md  CTEST_QUICK_REFERENCE.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATIONS.md  PROFILER_INTEGRATION_EXAMPLE.cpp  QUICK_REFERENCE.md  README.md  SHELL_TO_CTEST_MIGRATION.md  SUPERINSTRUCTIONS_GUIDE.md  SUPERINSTRUCTIONS_REPORT.md  benchmark.sh  toolchain-arm-aarch64-elf.cmake  toolchain-arm-eabi.cmake  toolchain-arm-none-eabi.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test-with-cmake.yml  code-quality.yml
cmake/: toolchain-arm-none-eabi.cmake  z80cppConfig.cmake.in
compatibility/circle/: bcmframebuffer.h  types.h  util.h
example/: README.md  z80sim.cpp  z80sim.h  zexall.h
examples/: CMakeLists.txt
examples/screentext/: CMakeLists.txt
examples/z80emu/: CMakeLists.txt
examples/z80emu/macos/: main.cpp
examples/z80emu/raspberrypi/: kernel.cpp
examples/z80emu/shared/: automania_sna.h  dingo.sna  dingo_sna.h  z80emu.cpp  z80emu.h  zexall.h
examples/z80screen/: CMakeLists.txt
examples/z80screen/macos/: screen.cpp  screen.h
include/: z80.h  z80_bus_interface.h  z80_decode.h  z80_impl.h  z80_performance.h  z80_profiler.h  z80_superinstructions.h  z80_types.h  z80operations.h
src/: z80.cpp
tests/: CMakeLists.txt  README.md  benchmark_shared.h  benchmark_shared.hpp  benchmark_tests.cpp  compare_benchmarks.py  game_benchmark_test.cpp  generate_test_programs.cpp  z80_benchmark_simple.cpp  z80_benchmark_test.cpp  z80_game_test.cpp  z80_sim_test.cpp  z80_sim_test.h  z80_sim_test.hpp
tests/spectrum-roms/games/: GAMES_READY.md  jet_set_willy.tap
tools/: tap2bin.py
